active border is ready

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,10 @@
   }
 }
 
-.nav-color {
-  color: #03045e;
+
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
